filter by bill type
