# docs/swagger.json
@@ -371,6 +371,12 @@
                         "description": "filter by supplier name",
                         "name": "vendor",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "filter by bill type",
+                        "name": "billType",
+                        "in": "query"
                     }
                 ],
                 "responses": {
